--- a/estiloindex3.css
+++ b/estiloindex3.css
@@ -1,43 +1,44 @@
-
-
 * {
     color: red;  
     font-family: 'Noto Sans', sans-serif;
     font-family: 'Poppins', sans-serif;
 }
+
 body {
     background: linear-gradient(236.85deg, #320404 27.26%, #692020 96.03%);
 }
+
 header {
     text-align: center;
 }
+
 img {
     max-width:100px;
     max-height:75px;
-    width: auto;s
+    width: auto;
     height: auto;
 }
 
 .container {
     display: flex;
     flex-flow: wrap;
-    margin: 100px 200px 200px 200px;
-    
+    margin: 100px 200px 200px 200px; 
+    justify-content: space-evenly;
+    align-items: center;   
 }
 
 .container a {
     text-decoration: none;
 }
 
-.container div {
-    
+.container div {    
     border: 1px red solid;
+    border-radius: 10px;
     padding: 10px;
     margin: 3px;
     justify-content: space-evenly;
     align-items: center;
     align-self: center;
     flex: inherit;
-    flex-basis: inherit;
-    
+    flex-basis: inherit;    
 }
